--- a/index.css
+++ b/index.css
@@ -1,8 +1,12 @@
+@import url('http://fonts.cdnfonts.com/css/digital-7-mono');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 :root {
+    --dark-red: #941f1f;
     --light-red: #ce6b5d;
     --light-basic: #f3f3f3;
+    --light-green: #7b9971;
+    --dark-green: #34502b;
 }
 
 html{
@@ -16,12 +20,30 @@ body {
     font-size: 1em;
 }
 
+.cronometro {
+    background-color: var(--dark-red); 
+    color: var(--light-basic); 
+    font-size: 4em; 
+    font-weight: normal; 
+    text-align: center;
+    font-family: 'digital-7 mono';
+    position: fixed;
+    width: 100%;
+    padding-top: 12px;
+    z-index: 200;
+}
+
+.cronometro span {
+    font-family: 'Roboto', sans-serif;
+    font-size: 14px;
+}
+
 header {
-    padding-top: 40px;
+    padding-top: 160px;
     color: var(--light-basic);
     background-color: var(--light-red);
+    background: linear-gradient(180deg, #ce6b5d, #ce6b5d, #ce6b5d, #f3f3f3);
     min-height: 100vh;
-    width: 100vw;
 }
 
 #logo_header {
@@ -29,11 +51,32 @@ header {
     margin-bottom: 40px;
 }
 
-#youtube_video {
-    pointer-events: none;
+#youtube-video {
     width: 700px;
+    pointer-events: none;
 }
 
 .video-buttons {
-    padding: 14px 0 44px 0;
+    padding: 14px 0 14px 0;
+}
+
+.video-text {
+    text-align: center;
+}
+
+.video-text-1 {
+    color: var(--dark-green);
+    font-size: 1.6em;
+    font-weight: 700;
+}
+
+.video-text-2 {
+    color: var(--dark-green);
+    font-size: 1em;
+}
+
+.session {
+    background-color: var(--light-basic);
+    text-align: center;
+    padding: 150px 0 150px 0;
 }
