digital-7 font to work on mobile browsers

--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-@import url('http://fonts.cdnfonts.com/css/digital-7-mono');
+@import url('https://db.onlinewebfonts.com/c/58045dabdc3a361cb9bb9faf2f1dd1f3?family=Digital-7');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 :root {
